--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_test?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=ZZAq12wsX
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
